--- a/03_EC2.md
+++ b/03_EC2.md
@@ -32,6 +32,12 @@ CPU에서 실행되는 소프트웨어보다 훨씬 효율적으로 수행합니
 
 ## EC2 사용 설정
 
+`키 페어` : `프라이빗 키`와 `퍼블릭 키`로 구성되며, 인스턴스에 연결할 때 자격 증명을 증명하는 데 사용하는 `보안 자격 증명 세트`입니다.   
+* Linux 인스턴스에는 암호가 없으므로 `인스턴스에 안전하게 로그인하기 위해` 키 페어를 사용합니다.
+* 인스턴스를 시작할 때 `프라이빗 키`를 제공하여 SSH를 통해 로그인합니다.
+* 키 페어를 아직 생성하지 않은 경우 `EC2 콘솔`을 사용하여 생성할 수 있습니다. 
+* 여러 리전에서 인스턴스를 시작하려면 `각 리전`에서 키 페어를 생성해야 합니다.
+
 > <h3>키 페어 생성</h3>
 
 1. Amazon EC2 콘솔을 엽니다.
@@ -41,9 +47,41 @@ CPU에서 실행되는 소프트웨어보다 훨씬 효율적으로 수행합니
 3. `[키 페어 생성]`을 클릭합니다.   
 ![image](https://user-images.githubusercontent.com/43658658/145006347-bca22ef8-520b-4e1f-b25b-de2ca8d39352.png)
 
-4. 
+4. 키 페어를 생성합니다.   
+![image](https://user-images.githubusercontent.com/43658658/145508671-70cec6cc-6b36-4577-9884-64a9f38b1bc6.png)   
+* `RSA` vs `ED25519` : 암호 체계 유형. 과거에는 RSA를 많이 사용했으나, `ED25519`가 더 뛰어난 암호 체계라고 합니다.
+  - 하지만 현재 `ED25519`는 Linux와 Mac 인스턴스에만 지원합니다. 
+  - `ED25519`를 선택하면 프라이빗 키 형식은 디폴트 `pem`입니다.
 
+5. 브라우저에서 프라이빗 키 파일을 자동으로 다운로드 받습니다.   
+![image](https://user-images.githubusercontent.com/43658658/145508737-3023d386-7d73-47a3-b484-28f4cc61f019.png)
 
+6. C드라이브에 `AWS` 폴더를 만들고 그 안에 `프라이빗 키 파일`을 저장합니다.
+![image](https://user-images.githubusercontent.com/43658658/145508803-3c6d1b20-1b0b-497e-9118-71036c0d4bed.png)
+
+> <h3>보안 그룹 생성</h3>
+
+`보안 그룹` : 방화벽 역할. 인스턴스의 인바운드/아웃바운드 트래픽을 모두 제어합니다.
+
+SSH를 사용하여 어떤 IP 주소가 인스턴스에 접근할 수 있도록 하는 규칙을 보안 그룹에 추가해야 합니다.
+
+1. EC2 콘솔에서 [보안 그룹] > [보안 그룹 생성]
+![image](https://user-images.githubusercontent.com/43658658/145509088-f18ce3bb-4a9b-4a52-a9ed-2b75801e0944.png)
+
+2. 보안 그룹의 이름, 설명, VPC를 선택합니다.   
+![image](https://user-images.githubusercontent.com/43658658/145509787-1b639ef2-a013-4947-b01d-4f772242a46b.png)   
+* VPC는 리전의 디폴트 VPC를 선택했습니다.
+
+3. `[규칙 추가]`를 눌러 아래와 같이 인바운드 규칙을 설정합니다.
+![image](https://user-images.githubusercontent.com/43658658/145509554-34417bc1-ce65-405c-8727-84c79f4ac520.png)   
+* `HTTP/HTTPS`로의 접근은 모두 허용.
+* `SSH`로의 접근은 자신만 허용.
+
+4. 아웃바운드 규칙은 모든 트래픽을 허용하도록 기본 설정을 유지합니다.
+![image](https://user-images.githubusercontent.com/43658658/145509733-0883b336-5c1b-4754-b37a-27bab324dede.png)
+
+5. [보안 그룹 생성] 버튼을 클릭해 보안 그룹을 생성합니다.
+![image](https://user-images.githubusercontent.com/43658658/145509834-f8c87509-25af-48c3-88ae-5743de07aa5a.png)
 
 ## Amazon EC2 Linux 인스턴스 시작하기
 
