--- a/03_EC2.md
+++ b/03_EC2.md
@@ -41,6 +41,7 @@ CPU에서 실행되는 소프트웨어보다 훨씬 효율적으로 수행합니
 > <h3>키 페어 생성</h3>
 
 1. Amazon EC2 콘솔을 엽니다.
+
 2. 왼쪽의 탐색 창에서 `[네트워크 및 보안] > [키 페어]`을 클릭합니다.   
 ![image](https://user-images.githubusercontent.com/43658658/145006173-1ce887ca-003f-4951-8544-2754f27d49b6.png)
 
@@ -56,7 +57,7 @@ CPU에서 실행되는 소프트웨어보다 훨씬 효율적으로 수행합니
 5. 브라우저에서 프라이빗 키 파일을 자동으로 다운로드 받습니다.   
 ![image](https://user-images.githubusercontent.com/43658658/145508737-3023d386-7d73-47a3-b484-28f4cc61f019.png)
 
-6. C드라이브에 `AWS` 폴더를 만들고 그 안에 `프라이빗 키 파일`을 저장합니다.
+6. C드라이브에 `AWS` 폴더를 만들고 그 안에 `프라이빗 키 파일`을 저장합니다.   
 ![image](https://user-images.githubusercontent.com/43658658/145508803-3c6d1b20-1b0b-497e-9118-71036c0d4bed.png)
 
 > <h3>보안 그룹 생성</h3>
@@ -65,27 +66,31 @@ CPU에서 실행되는 소프트웨어보다 훨씬 효율적으로 수행합니
 
 SSH를 사용하여 어떤 IP 주소가 인스턴스에 접근할 수 있도록 하는 규칙을 보안 그룹에 추가해야 합니다.
 
-1. EC2 콘솔에서 [보안 그룹] > [보안 그룹 생성]
+1. EC2 콘솔에서 [보안 그룹] > [보안 그룹 생성]   
 ![image](https://user-images.githubusercontent.com/43658658/145509088-f18ce3bb-4a9b-4a52-a9ed-2b75801e0944.png)
 
 2. 보안 그룹의 이름, 설명, VPC를 선택합니다.   
 ![image](https://user-images.githubusercontent.com/43658658/145509787-1b639ef2-a013-4947-b01d-4f772242a46b.png)   
 * VPC는 리전의 디폴트 VPC를 선택했습니다.
 
-3. `[규칙 추가]`를 눌러 아래와 같이 인바운드 규칙을 설정합니다.
+3. `[규칙 추가]`를 눌러 아래와 같이 인바운드 규칙을 설정합니다.   
 ![image](https://user-images.githubusercontent.com/43658658/145509554-34417bc1-ce65-405c-8727-84c79f4ac520.png)   
 * `HTTP/HTTPS`로의 접근은 모두 허용.
 * `SSH`로의 접근은 자신만 허용.
 
-4. 아웃바운드 규칙은 모든 트래픽을 허용하도록 기본 설정을 유지합니다.
+4. 아웃바운드 규칙은 모든 트래픽을 허용하도록 기본 설정을 유지합니다.   
 ![image](https://user-images.githubusercontent.com/43658658/145509733-0883b336-5c1b-4754-b37a-27bab324dede.png)
 
-5. [보안 그룹 생성] 버튼을 클릭해 보안 그룹을 생성합니다.
+5. [보안 그룹 생성] 버튼을 클릭해 보안 그룹을 생성합니다.   
 ![image](https://user-images.githubusercontent.com/43658658/145509834-f8c87509-25af-48c3-88ae-5743de07aa5a.png)
 
 ## Amazon EC2 Linux 인스턴스 시작하기
 
-EC2를 사용하여 인스턴스에서 실행되는 운영 체제와 애플리케이션을 설정하고 구성할 수 있습니다.
+EC2를 사용하여 인스턴스(서버)에서 실행되는 운영 체제와 애플리케이션을 설정하고 구성할 수 있습니다.
+
+1. EC2 콘솔에서 [인스턴스] > [인스턴스 시작]   
+![image](https://user-images.githubusercontent.com/43658658/145510387-87c0cba0-aaa2-4a33-8a01-6e07d544c1f7.png)
+
 
 
 
