--- a/03_EC2.md
+++ b/03_EC2.md
@@ -91,6 +91,110 @@ EC2를 사용하여 인스턴스(서버)에서 실행되는 운영 체제와 애
 1. EC2 콘솔에서 [인스턴스] > [인스턴스 시작]   
 ![image](https://user-images.githubusercontent.com/43658658/145510387-87c0cba0-aaa2-4a33-8a01-6e07d544c1f7.png)
 
+2. 프리 티어 버전의 `Amazon Linux 2 AMI (HVM)`를 선택합니다.   
+![image](https://user-images.githubusercontent.com/43658658/145510660-c8ad12ec-2c17-4588-b5ce-f29c9396b784.png)   
+* `AMI(Amazon Machine Image)` : 새 인스턴스를 생성하기 위한 이미지.
+* `HVM(하드웨어 가상머신, 완전가상화)` vs `PV(반가상화)`
+  - PV : 게스트 OS가 하이퍼바이저를 통해 하드웨어를 제어. 가볍기 때문에 성능이 좋음. PV를 사용하기 위해 게스트 OS에 대한 수정이 필요.
+  - HVM : 다른 게스트와 완전히 독립되고 OS 수정 없이 사용 가능. 하드웨어 자체가 `완전가상화`를 지원해야 하기 때문에 성능이 PV에 비해 떨어진다고 알려져 왔음.
+  - AWS가 발전하면서 HVM과 PV의 성능 차이가 크지 않게 되었고 오히려 HVM이 앞서는 경우도 생김. 현재 AMI 선택 페이지에서 PV는 보이지 않고 있음.
+
+3. 프리 티어 버전의 `t2.micro` 인스턴스 유형을 선택합니다.   
+![image](https://user-images.githubusercontent.com/43658658/145514275-7774a219-c9c2-49e9-8c26-f56028319106.png)   
+* `t2.micro`를 사용할 수 없는 리전에서는 `t3.micro`를 사용할 수 있습니다.
+
+4. 인스턴스 세부 정보
+![image](https://user-images.githubusercontent.com/43658658/145517616-b7a7838a-0cdf-4656-a5af-37916061f61c.png)   
+![image](https://user-images.githubusercontent.com/43658658/145517643-7ddb700a-25b7-45aa-852e-f89e5a618da1.png)   
+* 인스턴스 개수 : 생성할 인스턴스 개수입니다. 1로 입력합니다.
+* 구매 옵션 : 스팟 인스턴스로 구매 옵션입니다. 여기서는 체크하지 않습니다.
+  - 스팟 인스턴스 : 미사용 EC2 인스턴스를 요청하여 Amazon EC2 비용을 대폭 줄일 수 있습니다.
+* 네트워크 : VPC를 선택하거나 새 VPC 생성을 선택하여 Amazon VPC 콘솔로 이동해 새 VPC를 생성합니다. 마친 후에 마법사로 돌아와 새로 고침을 선택하면 해당 VPC가 목록에 로딩됩니다.
+* 서브넷 : 가용 영역(Availability Zone)을 선택하는 옵션입니다. 기본값 그대로 사용합니다.
+* 퍼블릭 IP 자동 할당 : 기본 설정 사용 시, 기본 서브넷을 사용하는 인스턴스는 퍼블릭 IPv4 주소를 자동 할당 받고, 기본이 아닌 서브넷의 인스턴스는 퍼블릭 IPv4 주소를 할당 받지 않습니다. 활성화 또는 비활성화를 선택하여 서브넷의 기본 설정을 재정의할 수 있습니다. 새로운 서브넷을 선택했다면 `활성화`를 선택해줘야 퍼블릭 IP를 할당 받을 수 있습니다.
+* 배치 그룹 : 인스턴스의 배치를 결정합니다. 배치를 어떻게 하느냐에 따라 트래픽을 효율적으로 처리할 수 있게 됩니다.
+* 용량 예약 : 특정 가용 영역의 Amazon EC2 인스턴스에 대해 원하는 기간만큼 컴퓨팅 용량을 예약할 수 있습니다.
+  - 없음 : 인스턴스가 용량 예약으로 시작되지 않도록 합니다. 인스턴스는 온디맨드 용량으로 실행됩니다.
+  - 열기 : 일치하는 속성과, 선택한 인스턴스 수에 맞는 용량이 있는 용량 예약으로 인스턴스를 시작합니다. 충분한 용량이 있는 적절한 용량 예약이 없는 경우 인스턴스는 온디맨드 용량을 사용합니다.
+  - ID별 대상 지정 : 선택한 용량 예약로 인스턴스를 시작합니다. 선택한 용량 예약의 용량이 선택한 인스턴스 수에 맞게 충분하지 않으면 인스턴스가 시작되지 않습니다.
+  - 그룹별 대상 지정 : 선택한 용량 예약 그룹에서 일치하는 속성 및 가용 용량이 있는 용량 예약로 인스턴스를 시작합니다. 선택한 그룹에 일치하는 속성 및 가용 용량이 있는 용량 예약이 없는 경우 인스턴스는 온디맨드 용량으로 시작됩니다.
+* IAM 역할 : IAM 역할 설정입니다.
+* 종료 방식 : 인스턴스의 운영체제를 종료했을 때 행동입니다. `중지`는 그냥 종료만 하고, `종료`는 종료 후 인스턴스를 삭제합니다.
+* 종료 방지 기능 활성화 : 실수로 삭제하는 것을 방지하는 옵션입니다.
+* 모니터링 : CloudWatch 세부 모니터링 사용 옵션입니다. 기본값 그대로 사용합니다.
+* 테넌시 : 인스턴스의 실행 방식입니다. VPC로 인스턴스를 시작하는 경우 격리된 전용 하드웨어(전용) 또는 전용 호스트(전용 호스트)에서 인스턴스를 실행하도록 선택할 수 있습니다. 추가 요금이 적용될 수 있습니다.
+
+5. 스토리지   
+![image](https://user-images.githubusercontent.com/43658658/145521329-c56b57d4-2e49-48da-a14e-498a0044bb8a.png)   
+* 유형: 인스턴스에 연결할 인스턴스 스토어 또는 Amazon EBS 볼륨을 선택합니다. 목록에 표시되는 볼륨 유형은 선택한 인스턴스 유형에 따라 달라집니다. 
+* 디바이스: 볼륨에서 사용할 디바이스 이름을 목록에서 선택합니다.
+* 스냅샷: 볼륨 복원에 사용할 스냅샷의 이름입니다. 또는 스냅샷 필드에 텍스트를 입력하여 사용 가능한 공유 및 퍼블릭 스냅샷을 검색할 수 있습니다. 스냅샷 정보는 대/소문자를 구분합니다.
+* 크기: EBS 볼륨의 경우, 스토리지 크기를 지정할 수 있습니다. 선택한 AMI와 인스턴스가 프리 티어에 해당되는 경우에도 `프리 티어` 한도를 유지하려면 총 스토리지 크기를 `30GiB 미만`으로 유지해야 합니다.
+* 볼륨 유형: EBS 볼륨에 대한 볼륨 유형을 선택합니다.
+  - 범용 SSD vs Provisioned IOPS SSD   
+  ![image](https://user-images.githubusercontent.com/43658658/145521019-62ab7c8a-bef6-4b06-a6cb-6114807cd6fa.png)
+* IOPS: `Provisioned IOPS SSD` 볼륨 유형을 선택한 경우, 볼륨에서 지원되는 초당 I/O(IOPS) 수를 입력할 수 있습니다.
+* 종료 시 삭제 여부: Amazon EBS 볼륨에 적용되는 기능으로, 확인란을 선택하면 인스턴스 종료 시 볼륨을 삭제합니다.
+* 암호화: 인스턴스 유형이 EBS 암호화를 지원하는 경우, 볼륨의 암호화 상태를 지정할 수 있습니다. 이 리전에서 기본적으로 암호화를 사용하도록 설정한 경우 기본 고객 관리형 키가 자동으로 선택됩니다. 다른 키를 선택하거나 암호화를 비활성화할 수 있습니다.
+
+6. 태그   
+태그는 AWS 리소스에 할당하는 레이블입니다. 각 태그는 사용자가 정의하는 키-값으로 구성됩니다.   
+![image](https://user-images.githubusercontent.com/43658658/145521803-40d7c77e-3f52-48d7-b69b-5124627a81ae.png)   
+태그를 사용하면 용도, 소유자 또는 환경을 기준으로 하는 등 `AWS 리소스`를 다양한 방식으로 `분류`할 수 있습니다.   
+예를 들어, 계정의 각 인스턴스에 인스턴스의 소유자(Owner)나 스택(Stack) 수준을 추적하는 데 도움이 되는 태그 세트를 정의할 수 있습니다.
+
+![image](https://user-images.githubusercontent.com/43658658/145522103-1af04972-f4e0-4f69-8af2-60e5aadd02fb.png)   
+* `인스턴스/볼륨/네트워크 인터페이스` : 현재 태그를 적용할 AWS 리소스를 설정합니다.
+
+7. EC2 사용 설정 때 설정한 보안 그룹을 선택합니다.   
+![image](https://user-images.githubusercontent.com/43658658/145517828-dc80675a-f8ba-462f-8b1a-56efb320cb8f.png)
+
+8. 마지막 검토 페이지에서 `시작하기`을 선택합니다.
+![image](https://user-images.githubusercontent.com/43658658/145517904-bf515a40-b0ea-4625-ac71-feec63eab835.png)
+
+9. 이전에 생성했던 키 페어 파일을 선택하고 `시작하기` 버튼을 누릅니다.   
+![image](https://user-images.githubusercontent.com/43658658/145522655-72fa0ef8-5161-44da-81f2-f9db4f3dae3f.png)
+
+10. 잠시만 기다리면 인스턴스가 `실행 중`으로 상태가 변경되며 생성됩니다.   
+![image](https://user-images.githubusercontent.com/43658658/145522824-771f91d5-1283-46c8-8d0d-6819ff0e422a.png)
+
+> <h3>인스턴스에 접속하기</h3>
+
+1. 인스턴스의 IP 주소를 확인합니다.   
+![image](https://user-images.githubusercontent.com/43658658/145522932-6613f67a-b83b-4581-9bd9-14224ce6e19e.png)
+
+2. `PuTTy`를 실행하고, IP 주소를 입력하고 SSH를 선택합니다.   
+![image](https://user-images.githubusercontent.com/43658658/145523005-14fdd3b9-28da-4476-a923-6c750de9c1c7.png)
+
+3. 프라이빗 키 파일을 선택하고 `Open`을 클릭합니다.   
+![image](https://user-images.githubusercontent.com/43658658/145523103-4afb5b8d-2f94-43e9-8024-f9cd7f3f783a.png)   
+* `pem` : SSH 키의 기본 프라이빗 키 형식
+* `ppk` : PuTTy에서 사용 가능한 SSH 프라이빗 키 형식
+
+4. 서버를 신뢰하겠는지 여부를 나타내는 경고창에 `Accept`를 누릅니다.   
+![image](https://user-images.githubusercontent.com/43658658/145523190-a0c763db-4690-4e42-8f62-6cdc38b54a74.png)
+
+5. Linux 2의 기본 사용자명인 `ec2-user`를 입력하고 `Enter`를 누르면 생성한 인스턴스에 접속됩니다.   
+![image](https://user-images.githubusercontent.com/43658658/145523238-00ea61d9-172e-42b4-9609-0c194b261429.png)   
+* `기본 사용자명` : 
+  - Amazon Linux 2 또는 Amazon Linux AMI : ec2-user
+  - CentOS AMI : centos 또는 ec2-user
+  - Debian AMI : admin
+  - Fedora AMI : fedora 또는 ec2-user
+  - RHEL AMI : ec2-user 또는 root
+  - SUSE AMI : ec2-user 또는 root
+  - Ubuntu AMI : ubuntu
+  - Oracle AMI : ec2-user
+  - Bitnami AMI : bitnami
+
+
+
+
+
+
+
+
+
 
 
 
