--- a/03_EC2.md
+++ b/03_EC2.md
@@ -187,11 +187,74 @@ EC2를 사용하여 인스턴스(서버)에서 실행되는 운영 체제와 애
   - Oracle AMI : ec2-user
   - Bitnami AMI : bitnami
 
+## EBS(Elastic Block Store)
 
+`EBS` : EC2 인스턴스에 장착하여 사용할 수 있는 `가상 저장 장치`.   
+* EC2 인스턴스에서 제공하는 기본 용량(루트)보다 `더 사용해야 할 때` 사용.
+* 운영체제를 중단시키지 않고 용량을 자유롭게 늘리고 싶을 때 사용.
+* 영구적인 데이터 보관이 필요할 때 사용.
+* RAID 등의 고급 기능이 필요할 때 사용.
 
+> <h3>기본 개념</h3>
 
+* 볼륨(Volume): EBS의 가장 기본적인 형태로 OS에서 바로 사용 가능한 형태입니다.
+* 이미지(Image): AMI(Amazon Machine Image)를 줄여 부르는 말입니다. 
+* 스냅샷(Snapshot): EBS 볼륨의 특정 시점을 그대로 복사하여 저장한 파일을 뜻합니다. 이 스냅샷을 이용하여 `EBS 볼륨`과 `AMI`를 생성할 수 있습니다.
+* IOPS(Input/Output Operation Per Second): 저장 장치의 성능 측정 단위입니다. AWS에서는 추가 비용을 지불하고 높은 성능(IOPS)의 EBS를 생성할 수 있습니다. 설정할 수 있는 값은 최소 100 IOPS에서 4000 IOPS까지입니다.
+  - IOPS는 16KB 단위로 처리됩니다. 따라서 크기가 작은 파일이 있다면 16KB 단위로 묶어서 처리하면 높은 성능을 낼 수 있습니다.
 
+> <h3>EBS 볼륨 추가하기</h3>
 
+1. EC2 콘솔에서 [볼륨] > [볼륨 생성]   
+![image](https://user-images.githubusercontent.com/43658658/145525116-3ec3287b-7653-4599-8358-e68000ea0fe2.png)
+
+2. 볼륨에 대한 설정   
+![image](https://user-images.githubusercontent.com/43658658/145525368-55c0ae27-3afc-4cbe-84e6-41cd4ff2f69f.png)   
+* 가용 영역 : 볼륨을 추가할 인스턴스의 가용 영역과 같아야 합니다.
+* 스냅샷 ID : EBS 스냅샷이 있다면 여기서 선택합니다.
+
+> <h3>인스턴스에 볼륨 장착하기</h3>
+
+1. 생성한 볼륨 위에서 [우클릭] > [볼륨 연결]   
+![image](https://user-images.githubusercontent.com/43658658/145526357-7a55964a-fa70-48a1-840c-0b463e6ba576.png)   
+
+2. 인스턴스의 ID를 확인하고 선택합니다.   
+![image](https://user-images.githubusercontent.com/43658658/145526485-a3d7f9c0-cb63-4be3-9ef9-bde9addb9129.png)   
+![image](https://user-images.githubusercontent.com/43658658/145526535-fc3c7724-fae6-470c-a245-0375c5c6a580.png)
+
+3. `볼륨 연결`을 클릭합니다.   
+
+4. 인스턴스의 [스토리지] 탭을 보면 2개의 볼륨이 있는 것을 확인할 수 있습니다.   
+![image](https://user-images.githubusercontent.com/43658658/145526721-2faa5bfe-21da-456c-96ce-bdc6418e7dde.png)
+
+> <h3>EC2 인스턴스에서 새로 생성한 EBS 볼륨 포맷하기</h3>
+
+새로 생성한 `EBS 볼륨`를 OS에서 사용하려면 알맞은 파일시스템으로 포맷을 해주어야 합니다.   
+이전에 생성한 EC2 인스턴스가 `Linux`이므로 `Ext4 파일시스템`을 사용하겠습니다.
+
+1. EC2 인스턴스에 장착된 EBS 볼륨의 `장치명`을 확인합니다.   
+![image](https://user-images.githubusercontent.com/43658658/145527266-f46f6876-c1ae-42d3-ba87-3be739db50f5.png)
+
+2. SSH로 EC2 인스턴스에 접속한 뒤 아래와 같이 `sudo mkfs -t ext4 /dev/sdf`를 입력하여 `EBS 볼륨을 포맷`합니다.   
+![image](https://user-images.githubusercontent.com/43658658/145527132-44bb0afc-572d-4f1d-98b1-de7074dd797b.png)
+
+> <h3>EBS 볼륨 마운트하기</h3>
+
+포맷까지 완료했으므로 EC2 인스턴스에 마운트만 하면 해당 볼륨을 사용할 수 있습니다.
+
+1. `ls /dev/sdf -al` 명령을 입력하여 /dev/sdf 장치가 있는지 확인합니다.   
+![image](https://user-images.githubusercontent.com/43658658/145527829-92ee80c3-52ce-4d92-93c0-dfe490295c85.png)   
+* /dev/sdf가 /dev/xvdf에 심볼릭 링크로 연결되어 있습니다.
+
+2. `sudo mount /dev/sdf /mnt`를 입력하여 저장 장치를 마운트합니다.   
+![image](https://user-images.githubusercontent.com/43658658/145527883-c16fca6b-ad85-435e-b591-ca1e99df9d16.png)   
+* /dev/sdf를 /mnt에 마운트(/mnt말고 다른 디렉토리를 지정해줘도 상관 없습니다).
+* /dev/sdf 대신 /dev/xvdf를 써도 무관합니다(심볼릭 링크).
+
+3. `df -h`를 통해 디스크를 확인해보면 /mnt에 /dev/xvdf와 /dev/sdf가 마운트된 것을 확인할 수 있습니다.   
+![image](https://user-images.githubusercontent.com/43658658/145528427-a8cca0fb-ce89-4e2d-ab47-a13357902ea9.png)
+
+이제 이곳에 파일을 저장할 수 있습니다.
 
 
 
