--- a/03_EC2.md
+++ b/03_EC2.md
@@ -203,6 +203,8 @@ EC2를 사용하여 인스턴스(서버)에서 실행되는 운영 체제와 애
 * IOPS(Input/Output Operation Per Second): 저장 장치의 성능 측정 단위입니다. AWS에서는 추가 비용을 지불하고 높은 성능(IOPS)의 EBS를 생성할 수 있습니다. 설정할 수 있는 값은 최소 100 IOPS에서 4000 IOPS까지입니다.
   - IOPS는 16KB 단위로 처리됩니다. 따라서 크기가 작은 파일이 있다면 16KB 단위로 묶어서 처리하면 높은 성능을 낼 수 있습니다.
 
+## EBS 볼륨
+
 > <h3>EBS 볼륨 추가하기</h3>
 
 1. EC2 콘솔에서 [볼륨] > [볼륨 생성]   
@@ -256,8 +258,90 @@ EC2를 사용하여 인스턴스(서버)에서 실행되는 운영 체제와 애
 
 이제 이곳에 파일을 저장할 수 있습니다.
 
+> <h3>EBS 볼륨 제거하기</h3>
 
+EC2 인스턴스에서 사용하지 않는 EBS 볼륨을 제거해보겠습니다. 
 
+1. `sudo umount /mnt` 명령을 입력하여 장치를 언마운트 합니다.   
+![image](https://user-images.githubusercontent.com/43658658/145528967-0e02ddef-f432-4042-a0c5-8f4ea3891b61.png)   
+* `df -h`를 통해 보면 `/mnt`가 사라졌음을 볼 수 있습니다.
 
+2. 사용하지 않는 볼륨을 우클릭하고 `[볼륨 분리]`를 클릭합니다.   
+![image](https://user-images.githubusercontent.com/43658658/145529168-10708fa3-829a-4477-b88d-ae09e066b2a9.png)   
+![image](https://user-images.githubusercontent.com/43658658/145529256-be06d663-cf44-4c2f-a5cd-1cd915ec35e6.png)
 
+3. 볼륨 상태가 `사용 가능`으로 변경되었습니다.   
+![image](https://user-images.githubusercontent.com/43658658/145529333-aeebf710-1716-44f8-805e-1ac483451252.png)
+
+이제 볼륨이 인스턴스로부터 분리되었습니다.   
+앞으로 볼륨을 사용할 계획이 없다면 `볼륨 삭제`를 통해 완전히 삭제할 수 있습니다.
+
+## EBS 스냅샷
+
+스냅샷 : EBS 볼륨의 전체 내용 중 특정 시점을 파일로 저장한 형태입니다. 다양한 용도로 사용이 가능합니다.   
+* EBS 볼륨 생성(다른 가용 영역에 생성 가능)
+* AMI 생성
+* 스냅샷을 다른 리전으로 복사
+
+> <h3>EBS 스냅샷 생성하기</h3>
+
+1. [볼륨] > [볼륨 선택] > [우클릭] > [스냅샷 생성]   
+![image](https://user-images.githubusercontent.com/43658658/145529927-aa349d9b-55ff-40df-8eae-56fba567457b.png)
+
+2. 그대로 스냅샷을 생성합니다.   
+![image](https://user-images.githubusercontent.com/43658658/145530011-6e1e8e98-5afe-49a8-ac9f-df38c03d3a12.png)
+
+3. [스냅샷] 탭으로 넘어가보면 스냅샷이 생성되고 있는 것을 볼 수 있습니다.   
+![image](https://user-images.githubusercontent.com/43658658/145530125-baeadc09-9fd8-43ea-97a1-30595ca72712.png)
+
+4. 스냅샷 생성이 완료되었습니다.   
+![image](https://user-images.githubusercontent.com/43658658/145530315-bf37a947-019e-4bb7-a212-7ed80686abf5.png)
+
+> <h3>스냅샷으로 볼륨 생성하기</h3>
+
+1. 생성한 스냅샷 위에서 [우클릭] > [스냅샷에서 볼륨 생성]   
+![image](https://user-images.githubusercontent.com/43658658/145530486-45d6f224-4c37-4d97-bc2d-2480812ba62d.png)
+
+2. 볼륨을 생성할 때와 비슷한 설정 창이 나타납니다.   
+![image](https://user-images.githubusercontent.com/43658658/145530810-c752b962-a64c-48ca-a840-48e2056c5d0b.png)   
+* 여기서 가용 영역을 다른 곳으로 선택하여 볼륨을 다른 가용 영역으로 옮길 수 있습니다.
+
+3. [볼륨 생성] 버튼을 누르면 볼륨이 생성됩니다.   
+![image](https://user-images.githubusercontent.com/43658658/145530957-32e526be-3223-49fb-8099-d6c494e04ceb.png)
+
+> <h3>스냅샷으로 이미지 생성하기</h3>
+
+1. 생성한 스냅샷 위에서 [우클릭] > [스냅샷에서 이미지 생성]   
+![image](https://user-images.githubusercontent.com/43658658/145531115-96ed345e-110d-486e-a1b0-a3b3d25f8896.png)
+
+2. AMI 설정을 진행합니다.   
+![image](https://user-images.githubusercontent.com/43658658/145531494-5bef63ca-22de-45ab-a8de-76088a0c21cd.png)   
+* `가상화 유형` : `HVM`과 `PV` 중 선택합니다.   
+* `부팅 모드` : `BIOS`와 `UEFI` 중 선택합니다.
+
+3. 기본으로 장착될 볼륨에 대한 설정입니다.   
+![image](https://user-images.githubusercontent.com/43658658/145531642-2cba276a-bf95-4d8f-84f1-0130139ea9f4.png)
+
+4. `[이미지 생성]` 버튼을 누르면 이미지가 생성됩니다.   
+
+5. [AMI] 탭으로 가면 스냅샷으로 생성한 이미지가 생성되었음을 확인할 수 있습니다.   
+![image](https://user-images.githubusercontent.com/43658658/145531830-c0ae8fee-ea15-4614-9aec-8af6bb7ec89d.png)
+
+이 AMI 파일을 통해 EC2 인스턴스를 생성할 수 있습니다.
+
+> <h3>스냅샷을 다른 리전으로 복사하기</h3>
+
+볼륨은 `다른 가용 영역과 리전`으로 이전이 `불가능`합니다.   
+이를 해결하기 위해서는 `볼륨을 스냅샷으로 생성`한 뒤 `다른 리전으로 복사`해야 합니다.
+
+1. 생성한 스냅샷 위에서 [우클릭] > [스냅샷 복사]   
+![image](https://user-images.githubusercontent.com/43658658/145532626-aa80d166-b6c1-4af8-a565-d2b64ccff6d1.png)
+
+2. 원하는 리전을 선택하고 [스냅샷 복사]를 클릭합니다.   
+![image](https://user-images.githubusercontent.com/43658658/145532791-067e3f6c-6b3d-4ede-9100-e3c7d6f7c828.png)
+
+3. 우측 상단에 리전을 방금 선택한 리전으로 바꾸고 [스냅샷] 탭으로 들어가면 복사된 스냅샷이 생성된 것을 확인할 수 있습니다.   
+![image](https://user-images.githubusercontent.com/43658658/145533025-79eb63b2-4bfd-4f7a-a8c3-995ba53b259b.png)
+
+이제 이 스냅샷으로 오하이오 리전에서 볼륨이나 AMI를 생성하여 사용하면 됩니다.
 
