--- a/03_EC2.md
+++ b/03_EC2.md
@@ -77,6 +77,10 @@ SSH를 사용하여 어떤 IP 주소가 인스턴스에 접근할 수 있도록 
 ![image](https://user-images.githubusercontent.com/43658658/145509554-34417bc1-ce65-405c-8727-84c79f4ac520.png)   
 * `HTTP/HTTPS`로의 접근은 모두 허용.
 * `SSH`로의 접근은 자신만 허용.
+* CIDR(Classless Inter-Domain Routing) 표기법 :   
+  - IP 주소 할당 방법입니다. 급격히 부족해지는 IPv4 주소를 보다 효율적으로 사용하기 위해 CIDR 표기법을 사용합니다. `xxx.xxx.xxx.xxx/yy` 형태로 표기하는데 맨 뒤의 yy는 `서브넷 마스크`를 2진수로 바꾸었을 때 1의 개수입니다.
+  - `192.168.0.0/24`라면 `192.168.0.1부터 192.168.0.254까지` 라는 의미입니다(`192.168.0.0`는 네트워크 `192.168.0.255`는 브로드캐스트).
+  - `192.168.0.15/32`이면 192.168.0.15 `한 개`의 IP 주소만 표현하게 됩니다.
 
 4. 아웃바운드 규칙은 모든 트래픽을 허용하도록 기본 설정을 유지합니다.   
 ![image](https://user-images.githubusercontent.com/43658658/145509733-0883b336-5c1b-4754-b37a-27bab324dede.png)
