--- a/10_S3.md
+++ b/10_S3.md
@@ -1,13 +1,13 @@
 # S3(Simple Storage Service)
 
-`HTTP 프로토콜`을 이용하는 `객체 스토리지 서비스`입니다. 원하는 양 만큼의 데이터를 저장하고 보호할 수 있습니다.
+`REST API`를 이용하는 `객체 스토리지 서비스`입니다. 원하는 양 만큼의 데이터를 저장하고 보호할 수 있습니다.
 
 ## S3의 용도
 
 대용량의 파일/데이터를 EC2와 EBS에 저장하면 많은 비용과 노동이 발생하지만, S3에 저장하게 되면 용량의 제한이 없고, 비용이 저렴합니다.   
 또한, `정적/동적` 웹 페이지가 있다고 할 때, `정적 웹 페이지`는 EC2와 EBS를 구성할 필요 없이 `S3 정적 웹 호스팅 서비스`를 이용하면 성능도 높일 수 있고 비용도 절감할 수 있습니다.
 
-파일의 업로드/다운로드를 `HTTP 프로토콜`로 처리합니다.
+파일의 업로드/다운로드를 `HTTP 프로토콜`로 처리합니다(REST API).
 
 ## S3의 용어
 
@@ -15,7 +15,7 @@
   - 객체 속 데이터는 `키-값` 형식입니다.
   - 객체 하나의 크기 : 1Byte ~ 5TB
 * `버킷(bucket)` : S3에서 생성할 수 있는 `최상위 디렉토리`입니다. 객체는 버킷 안에 저장됩니다.
-  - 리전별로 생성이 가능하고, 버킷 이름은 모든 리전 중 유일해야 합니다.
+  - 리전별로 생성이 가능하고, 버킷 이름은 `모든 리전 중 유일`해야 합니다.
   - 저장 가능한 객체의 개수와 용량은 `무제한`입니다.
   - `접속 제어` 및 `권한 관리`가 가능합니다.
   - `http://examplebucket.s3.amazonaws.com/helloworld.jpg` 처럼 URL로 접근이 가능합니다. 여기서 examplebucket은 버킷, helloworld.jpg은 객체
@@ -34,14 +34,39 @@ S3 객체 Lambda에서 데이터 처리 요금의 여섯 가지 비용 요소를
 
 ## S3 버킷 생성
 
+1. `S3` 콘솔로 접속해서 [버킷] > [버킷 만들기]   
+![image](https://user-images.githubusercontent.com/43658658/145761649-d429c324-72b4-4286-859b-d785ff9fd41f.png)
 
+2. 버킷을 설정하고 [버킷 만들기]   
+![image](https://user-images.githubusercontent.com/43658658/145763318-292522b3-4b07-4bc7-8f1e-d4acdb6c6350.png)   
+![image](https://user-images.githubusercontent.com/43658658/145763295-5d60176d-3bda-4243-ad57-5a1d1e3d092f.png)   
+![image](https://user-images.githubusercontent.com/43658658/145763901-9050e46c-6d05-4fa4-a1dd-c20dedc95986.png)   
+![image](https://user-images.githubusercontent.com/43658658/145763777-cd1dd790-d434-4509-b270-b2c4b0585403.png)
 
+3. 버킷이 생성되었습니다.   
+![image](https://user-images.githubusercontent.com/43658658/145764162-94df8c1b-20a2-4a0c-8027-799ca4b2e7c2.png)
 
+## S3 버킷에 파일 업로드/다운로드
 
+> <h3>파일 업로드</h3>
 
+1. 방금 생성한 버킷으로 들어가서 `[업로드]`   
+![image](https://user-images.githubusercontent.com/43658658/145764334-c4109dc0-c93f-4d6c-8166-8150313b976b.png)
 
+2. 적절한 파일을 선택합니다.   
+![image](https://user-images.githubusercontent.com/43658658/145764376-27ee544d-8c3e-4953-9636-1996a42edafb.png)
 
+3. 아래쪽에 속성에서 스토리지 클래스와 암호화 설정을 지정합니다.   
+![image](https://user-images.githubusercontent.com/43658658/145764677-87fa59b9-c134-4d1a-a443-fd853bf241e3.png)   
+![image](https://user-images.githubusercontent.com/43658658/145765037-80d3fb89-a473-43a8-89dd-a9ae8270b2a1.png)
 
+4. [업로드] 버튼을 누르면, 버킷에 파일이 업로드 된 것을 확인할 수 있습니다.   
+![image](https://user-images.githubusercontent.com/43658658/145765212-65990731-e506-4060-beab-12d161c5daa7.png)   
+
+> <h3>파일 다운로드</h3>
+
+파일을 체크하고 [다운로드]를 클릭합니다.   
+![image](https://user-images.githubusercontent.com/43658658/145765334-a0e89d59-0297-48b6-9cfd-5d6060dadfb3.png)
 
 
 
