--- a/10_S3.md
+++ b/10_S3.md
@@ -41,6 +41,7 @@ S3 객체 Lambda에서 데이터 처리 요금의 여섯 가지 비용 요소를
 ![image](https://user-images.githubusercontent.com/43658658/145763318-292522b3-4b07-4bc7-8f1e-d4acdb6c6350.png)   
 ![image](https://user-images.githubusercontent.com/43658658/145763295-5d60176d-3bda-4243-ad57-5a1d1e3d092f.png)   
 ![image](https://user-images.githubusercontent.com/43658658/145763901-9050e46c-6d05-4fa4-a1dd-c20dedc95986.png)   
+버전 관리를 사용하여 한 버킷에 `여러 버전의 객체를 보관`하고, 실수로 삭제되거나 덮어쓰기된 객체를 복원할 수 있습니다. 객체를 영구적으로 제거하지 않고 삭제하는 경우, Amazon S3에서는 `삭제 마커를 삽입`하며 이 삭제 마커가 현재 객체 버전이 됩니다. 따라서 `나중에 이전 버전을 복원`할 수 있습니다.   
 ![image](https://user-images.githubusercontent.com/43658658/145763777-cd1dd790-d434-4509-b270-b2c4b0585403.png)
 
 3. 버킷이 생성되었습니다.   
@@ -60,13 +61,48 @@ S3 객체 Lambda에서 데이터 처리 요금의 여섯 가지 비용 요소를
 ![image](https://user-images.githubusercontent.com/43658658/145764677-87fa59b9-c134-4d1a-a443-fd853bf241e3.png)   
 ![image](https://user-images.githubusercontent.com/43658658/145765037-80d3fb89-a473-43a8-89dd-a9ae8270b2a1.png)
 
-4. [업로드] 버튼을 누르면, 버킷에 파일이 업로드 된 것을 확인할 수 있습니다.   
+4. [업로드] 버튼을 누르면, 버킷에 파일(객체)이 업로드 된 것을 확인할 수 있습니다.   
 ![image](https://user-images.githubusercontent.com/43658658/145765212-65990731-e506-4060-beab-12d161c5daa7.png)   
 
 > <h3>파일 다운로드</h3>
 
-파일을 체크하고 [다운로드]를 클릭합니다.   
+객체를 체크하고 [다운로드]를 클릭합니다.   
 ![image](https://user-images.githubusercontent.com/43658658/145765334-a0e89d59-0297-48b6-9cfd-5d6060dadfb3.png)
+
+## S3 세부 설정
+
+> <h3>객체 접근 권한 설정</h3>
+
+이전에 업로드 한 파일로 들어가보면 `객체 URL`이 있습니다.   
+![image](https://user-images.githubusercontent.com/43658658/145766287-72c9f629-2629-4292-9cf5-cf849142f1d6.png)
+
+하지만 이 URL은 열리지 않습니다.   
+![image](https://user-images.githubusercontent.com/43658658/145766350-6f4e1bc6-0bf3-4348-93c0-07b667cfac60.png)
+
+접근 권한을 설정해서 파일이 열리도록 해보겠습니다.   
+
+1. [권한] > [퍼블릭 액세스 차단] > [편집]   
+![image](https://user-images.githubusercontent.com/43658658/145768410-355c7284-1ace-4716-8c9a-c8c6c4d3bbc0.png)
+
+여기서 `임의의`는 `모든`의 의미와 같습니다.   
+![image](https://user-images.githubusercontent.com/43658658/145768916-17d140f2-5d42-4626-b0b1-39b801e7cd9e.png)   
+
+2. [변경 사항 저장]을 누릅니다.   
+![image](https://user-images.githubusercontent.com/43658658/145769048-84d3198e-0bbd-4b4d-8127-dd982978aa8a.png)
+
+3. 다음으로 [객체 소유권] > [편집]   
+![image](https://user-images.githubusercontent.com/43658658/145769597-9c025f6b-e7df-4e59-8a40-10632ebad09b.png)
+
+4. `ACL을 활성화`합니다.   
+![image](https://user-images.githubusercontent.com/43658658/145769706-dec87b5b-b72b-47ed-8516-7a01adf48c61.png)
+
+5. 이제 원하는 객체를 선택하고 [작업] > [ACL을 통해 퍼블릭으로 설정]   
+![image](https://user-images.githubusercontent.com/43658658/145769980-e337f574-b8ad-4c55-b79f-9d663c35c220.png)   
+![image](https://user-images.githubusercontent.com/43658658/145770146-b04254aa-f268-400a-834d-af45e8355c56.png)
+
+6. 이제 다시 객체의 URL로 접속하면 사진이 정상적으로 나타납니다.   
+![image](https://user-images.githubusercontent.com/43658658/145770265-419e78ec-192e-43ab-a552-5cb8d4c84d3b.png)
+
 
 
 
