--- a/10_S3.md
+++ b/10_S3.md
@@ -103,6 +103,43 @@ S3 객체 Lambda에서 데이터 처리 요금의 여섯 가지 비용 요소를
 6. 이제 다시 객체의 URL로 접속하면 사진이 정상적으로 나타납니다.   
 ![image](https://user-images.githubusercontent.com/43658658/145770265-419e78ec-192e-43ab-a552-5cb8d4c84d3b.png)
 
+애초에 객체를 업로드할 때 `퍼블릭 읽기 액세스 권한`을 부여하는 방법도 있습니다.   
+객체 업로드 설정 페이지에서 [권한] > [미리 정의된 ACL] > [퍼블릭 읽기 액세스 권한 부여]를 선택합니다.   
+![image](https://user-images.githubusercontent.com/43658658/145771669-30e94641-f13a-4101-b9e8-58c89e231793.png)
+
+> <h3>버킷 접근 권한 설정</h3>
+
+버킷에 접근 권한을 설정하면 버킷에 포함된 모든 객체에 적용됩니다.   
+
+1. [권한] > [버킷 정책] > [편집]   
+![image](https://user-images.githubusercontent.com/43658658/145773338-b1c100b8-cdb7-4d22-94ac-7917f682470d.png)
+
+2. [정책 생성기]를 눌러줍니다.   
+![image](https://user-images.githubusercontent.com/43658658/145773406-ce6757ca-60c4-483a-890a-139f8cea7b7c.png)
+
+3. 아래와 같이 설정하고 [Add Statement]를 눌러줍니다.   
+![image](https://user-images.githubusercontent.com/43658658/145774014-3b9e6873-078c-42d4-a22d-ea5ff1c22d72.png)   
+* `Select Type of Policy` : 정책 타입을 선택.
+* `Effect` : 허용/거부 선택. 인터넷에 대해 접근을 `허용`해야 하기에 `Allow` 선택.
+* `Principal` : 접근을 허용할 사용자. 인터넷에 대해 접근을 허용해야 하므로 전체를 의미하는 `*` 작성.
+* `Actions` : 파일을 받는 Action만 필요하므로 `GetObject` 체크.
+* `ARN` : ARN은 버킷의 [속성]에 들어가면 볼 수 있습니다.   
+![image](https://user-images.githubusercontent.com/43658658/145774347-ff34b081-8d4e-46dc-9315-20f799698b8c.png)
+
+4. 최종 설정을 확인하고 [Generate Policy]를 눌러줍니다.   
+![image](https://user-images.githubusercontent.com/43658658/145774462-c6b9c7b4-5f9b-40e4-a12d-348dcec12f49.png)
+
+5. JSON 텍스트 전체를 복사합니다.   
+![image](https://user-images.githubusercontent.com/43658658/145774556-c2d7002e-3937-469d-8261-0b2da68fdda1.png)
+
+6. 버킷 정책 편집기로 돌아와서 붙여넣습니다.   
+![image](https://user-images.githubusercontent.com/43658658/145774825-c7c9da70-cabd-47e8-a9e4-0b61d07bb6a5.png)
+
+7. 
+
+
+
+
 
 
 
