--- a/10_S3.md
+++ b/10_S3.md
@@ -111,6 +111,9 @@ S3 객체 Lambda에서 데이터 처리 요금의 여섯 가지 비용 요소를
 
 버킷에 접근 권한을 설정하면 버킷에 포함된 모든 객체에 적용됩니다.   
 
+먼저 퍼블릭 액세스가 설정되지 않은 파일 하나를 업로드합니다.   
+![image](https://user-images.githubusercontent.com/43658658/145777323-97a4f4f6-e45c-4a37-a979-3df08346d002.png)
+
 1. [권한] > [버킷 정책] > [편집]   
 ![image](https://user-images.githubusercontent.com/43658658/145773338-b1c100b8-cdb7-4d22-94ac-7917f682470d.png)
 
@@ -123,19 +126,21 @@ S3 객체 Lambda에서 데이터 처리 요금의 여섯 가지 비용 요소를
 * `Effect` : 허용/거부 선택. 인터넷에 대해 접근을 `허용`해야 하기에 `Allow` 선택.
 * `Principal` : 접근을 허용할 사용자. 인터넷에 대해 접근을 허용해야 하므로 전체를 의미하는 `*` 작성.
 * `Actions` : 파일을 받는 Action만 필요하므로 `GetObject` 체크.
-* `ARN` : ARN은 버킷의 [속성]에 들어가면 볼 수 있습니다.   
+* `ARN` : ARN은 버킷의 [속성]에 들어가면 볼 수 있습니다. 전체 입력은 `ARN/*`로 `버킷 아래의 모든 파일`을 가리키도록 합니다.   
 ![image](https://user-images.githubusercontent.com/43658658/145774347-ff34b081-8d4e-46dc-9315-20f799698b8c.png)
 
 4. 최종 설정을 확인하고 [Generate Policy]를 눌러줍니다.   
-![image](https://user-images.githubusercontent.com/43658658/145774462-c6b9c7b4-5f9b-40e4-a12d-348dcec12f49.png)
+![image](https://user-images.githubusercontent.com/43658658/145777099-9a08575b-fb31-47d9-8818-92432c21f3db.png)
 
 5. JSON 텍스트 전체를 복사합니다.   
-![image](https://user-images.githubusercontent.com/43658658/145774556-c2d7002e-3937-469d-8261-0b2da68fdda1.png)
+![image](https://user-images.githubusercontent.com/43658658/145777125-e07f759f-d42b-45d8-a242-c83227be0e12.png)
 
 6. 버킷 정책 편집기로 돌아와서 붙여넣습니다.   
-![image](https://user-images.githubusercontent.com/43658658/145774825-c7c9da70-cabd-47e8-a9e4-0b61d07bb6a5.png)
+![image](https://user-images.githubusercontent.com/43658658/145777195-a7fdef82-d7d6-42ca-a533-b0e2d077cbfc.png)
 
-7. 
+7. [변경 사항 저장]을 누릅니다.   
+8. 객체 URL로 접속하면 정상적으로 접속되는 것을 확인할 수 있습니다.   
+![image](https://user-images.githubusercontent.com/43658658/145777397-d5cee624-2e77-41ac-8b07-6d7c5f04727b.png)
 
 
 
