--- a/10_S3.md
+++ b/10_S3.md
@@ -126,7 +126,7 @@ S3 객체 Lambda에서 데이터 처리 요금의 여섯 가지 비용 요소를
 * `Effect` : 허용/거부 선택. 인터넷에 대해 접근을 `허용`해야 하기에 `Allow` 선택.
 * `Principal` : 접근을 허용할 사용자. 인터넷에 대해 접근을 허용해야 하므로 전체를 의미하는 `*` 작성.
 * `Actions` : 파일을 받는 Action만 필요하므로 `GetObject` 체크.
-* `ARN` : ARN은 버킷의 [속성]에 들어가면 볼 수 있습니다. 전체 입력은 `ARN/*`로 `버킷 아래의 모든 파일`을 가리키도록 합니다.   
+* `ARN(Amazon Resource Name)` : ARN은 버킷의 [속성]에 들어가면 볼 수 있습니다. 전체 입력은 `ARN/*`로 `버킷 아래의 모든 파일`을 가리키도록 합니다.   
 ![image](https://user-images.githubusercontent.com/43658658/145774347-ff34b081-8d4e-46dc-9315-20f799698b8c.png)
 
 4. 최종 설정을 확인하고 [Generate Policy]를 눌러줍니다.   
@@ -142,6 +142,43 @@ S3 객체 Lambda에서 데이터 처리 요금의 여섯 가지 비용 요소를
 8. 객체 URL로 접속하면 정상적으로 접속되는 것을 확인할 수 있습니다.   
 ![image](https://user-images.githubusercontent.com/43658658/145777397-d5cee624-2e77-41ac-8b07-6d7c5f04727b.png)
 
+## 정적 웹 호스팅 버킷
+
+먼저 `index.html` 파일을 메모장을 이용해 생성해줍니다.   
+
+``` html
+<html>
+<head>
+    <title>S3 Example Website Hosting</title>
+</head>
+<body>
+    <p>Hello S3</p>
+</body>
+</html>
+```
+
+정적 웹 호스팅 버킷을 생성합니다.  
+
+1. 버킷을 하나 생성합니다.   
+2. 버킷의 [속성] > [정적 웹 사이트 호스팅] > [편집]   
+![image](https://user-images.githubusercontent.com/43658658/145782072-81f0d195-bb99-4bd5-ae89-1bd7582a8e78.png)
+
+3. 아래와 같이 작성합니다.   
+![image](https://user-images.githubusercontent.com/43658658/145782422-339ba068-9c44-482e-b2fa-7ceff2a143c3.png)
+
+4. `index.html` 객체를 업로드합니다.   
+![image](https://user-images.githubusercontent.com/43658658/145782958-91f9a5a4-bef8-42d2-b375-1d249931472d.png)
+
+5. 버킷의 [속성] > [정적 웹 사이트 호스팅] > [버킷 웹 사이트 엔드포인트]   
+![image](https://user-images.githubusercontent.com/43658658/145782825-046c121d-a3e8-4bae-a784-e598a78ec2ea.png)
+
+6. `index.html`이 나타납니다.   
+![image](https://user-images.githubusercontent.com/43658658/145782883-110c4373-5153-4b95-9fa8-5e1402ef45fd.png)
+
+정적 웹 페이지의 경우 일반적인 버킷에 올려도 웹 페이지가 띄워집니다.   
+![image](https://user-images.githubusercontent.com/43658658/145781555-9e35077c-6019-4d90-84a0-ada582a658df.png)
+
+하지만 둘의 URL이 다릅니다.   
 
 
 
