--- a/10_S3.md
+++ b/10_S3.md
@@ -178,18 +178,6 @@ S3 객체 Lambda에서 데이터 처리 요금의 여섯 가지 비용 요소를
 정적 웹 페이지의 경우 일반적인 버킷에 올려도 웹 페이지가 띄워집니다.   
 ![image](https://user-images.githubusercontent.com/43658658/145781555-9e35077c-6019-4d90-84a0-ada582a658df.png)
 
-하지만 둘의 URL이 다릅니다.   
-
-
-
-
-
-
-
-
-
-
-
-
+하지만 둘의 URL이 약간 다릅니다.   
 
 
