--- a/10_S3.md
+++ b/10_S3.md
@@ -180,4 +180,7 @@ S3 객체 Lambda에서 데이터 처리 요금의 여섯 가지 비용 요소를
 
 하지만 둘의 URL이 약간 다릅니다.   
 
+정적 웹 호스팅 서비스를 이용하는 이유는 `index.html`을 URL에 지정해주지 않아도 알아서 `index.html`을 찾아준다는 점과
+`사용자 정의 오류 페이지`와 `301 리다이렉션`을 설정할 수 있다는 점 때문입니다.
+
 
