--- a/10_S3.md
+++ b/10_S3.md
@@ -183,4 +183,25 @@ S3 객체 Lambda에서 데이터 처리 요금의 여섯 가지 비용 요소를
 정적 웹 호스팅 서비스를 이용하는 이유는 `index.html`을 URL에 지정해주지 않아도 알아서 `index.html`을 찾아준다는 점과
 `사용자 정의 오류 페이지`와 `301 리다이렉션`을 설정할 수 있다는 점 때문입니다.
 
+## HTTP Referer로 접근 제한하기
 
+S3에 올려진 그림 파일을 원하는 도메인에서만 보여줄 수 있도록 설정해보겠습니다.   
+S3는 데이터 전송량에 따라 요금 책정하기 때문에 원하지 않는 도메인에서의 링크를 막는다면 그만큼 비용을 절감할 수 있습니다.
+
+> <h3>HTTP Referer</h3>
+
+`HTTP Referer`는 HTTP 헤더값으로서 웹 브라우저에서 생성하는 데이터입니다.
+
+예를 들어, `http://example.com`이라는 웹사이트에서 `http://hello.com`의 링크를 클릭하거나 `http://hello.com`로 <img> 태그로 그림 파일을 보여줄 때, `http://hello.com`로 보내는 HTTP 헤더의 Referer 값은 `http://example.com`이 됩니다.   
+따라서 링크를 어디서 클릭했느냐, 그림 파일을 어디서 보여줬느냐를 알 수 있습니다.   
+S3에서는 이 Referer 값을 판단해서 파일을 보여줄지 말지 결정할 수 있습니다.
+
+실습을 위해 버킷을 2개 사용합니다.
+
+하나는 `그림 파일 저장 버킷`, 다른 하나는 `정적 웹 호스팅 버킷`입니다.
+
+먼저 `그림 파일 저장 버킷`을 열고 [권한] > [버킷 정책]에서 아래와 같이 정책을 입력합니다.   
+![image](https://user-images.githubusercontent.com/43658658/145914023-cbadb831-4684-48e1-8a9c-1732fccd9c4d.png)   
+* `Condition` : 조건절입니다. 이곳에 설정한 조건에 맞으면 `허용(Allow)` 또는 `거부(Deny)` 합니다.
+* `StringLike` : Condition 안에 사용하는 조건문이고, 뜻은 `문자열을 포함하고 있을 때` 입니다.
+* `aws:Referer` : `Referer 값을 지정합니다. 보통 도메인을 설정하며 맨 뒤에 `/*`를 붙여주어, 도메인 이하 모든 경로에 대해 허용합니다. `/hello.html`처럼 특정 파일의 경로를 지정할 수도 있습니다. 여러 도메인을 지정하려면 ,(콤마)로 구분하면 됩니다.
