--- a/10_S3.md
+++ b/10_S3.md
@@ -201,7 +201,8 @@ S3에서는 이 Referer 값을 판단해서 파일을 보여줄지 말지 결정
 하나는 `그림 파일 저장 버킷`, 다른 하나는 `정적 웹 호스팅 버킷`입니다.
 
 먼저 `그림 파일 저장 버킷`을 열고 [권한] > [버킷 정책]에서 아래와 같이 정책을 입력합니다.   
-![image](https://user-images.githubusercontent.com/43658658/145914023-cbadb831-4684-48e1-8a9c-1732fccd9c4d.png)   
+![image](https://user-images.githubusercontent.com/43658658/145943325-38e2eded-d9ff-4458-985d-7974c604bd24.png)   
 * `Condition` : 조건절입니다. 이곳에 설정한 조건에 맞으면 `허용(Allow)` 또는 `거부(Deny)` 합니다.
 * `StringLike` : Condition 안에 사용하는 조건문이고, 뜻은 `문자열을 포함하고 있을 때` 입니다.
-* `aws:Referer` : `Referer 값을 지정합니다. 보통 도메인을 설정하며 맨 뒤에 `/*`를 붙여주어, 도메인 이하 모든 경로에 대해 허용합니다. `/hello.html`처럼 특정 파일의 경로를 지정할 수도 있습니다. 여러 도메인을 지정하려면 ,(콤마)로 구분하면 됩니다.
+* `aws:Referer` : `Referer` 값을 지정합니다. 보통 도메인을 설정하며 맨 뒤에 `/*`를 붙여주어, 도메인 이하 모든 경로에 대해 허용합니다. `/hello.html`처럼 특정 파일의 경로를 지정할 수도 있습니다. 여러 도메인을 지정하려면 ,(콤마)로 구분하면 됩니다.
+
