--- a/10_S3.md
+++ b/10_S3.md
@@ -222,3 +222,6 @@ S3에서는 이 Referer 값을 판단해서 파일을 보여줄지 말지 결정
 그리고 정적 웹 호스팅 버킷의 [속성] > [정적 웹 사이트 호스팅]에서 엔드포인트로 접속합니다.   
 ![image](https://user-images.githubusercontent.com/43658658/145944999-eed3a7fa-65e0-433b-8cd4-895543a9c784.png)
 
+사진이 정상적으로 나타나는 것을 확인할 수 있습니다.   
+![image](https://user-images.githubusercontent.com/43658658/145946055-173f7d73-ed7f-4b39-9d4f-139fa625559e.png)
+
