--- a/10_S3.md
+++ b/10_S3.md
@@ -247,7 +247,7 @@ S3에서는 이 Referer 값을 판단해서 파일을 보여줄지 말지 결정
 버킷의 [속성] > [버킷 버전 관리] > [편집]   
 ![image](https://user-images.githubusercontent.com/43658658/145948013-c34e7eb0-6e35-4b6f-ba53-c1e14325f3a6.png)
 
-`활성화` 해줍니다.   
+`활성화` 해줍니다(버전 관리 기능은 한 번 활성화하면 비활성화 할 수 없습니다).   
 ![image](https://user-images.githubusercontent.com/43658658/145948091-67126eb7-d45f-4ccd-b835-b9d6bb617d71.png)
 
 `index.html` 파일을 수정해서 같은 이름으로 업로드하고, `버전 표시`를 `on`하면 아래와 같이 파일에 버전이 표시됩니다.   
