--- a/10_S3.md
+++ b/10_S3.md
@@ -256,7 +256,19 @@ S3에서는 이 Referer 값을 판단해서 파일을 보여줄지 말지 결정
 `현재 버전` 파일을 삭제하면, 이전의 파일이 복원됩니다.   
 ![image](https://user-images.githubusercontent.com/43658658/145949869-0e561609-34fb-4ba8-8ec1-18b1538722e3.png)
 
+## 버킷 수명 주기 설정
 
+수명 주기(Lifecycle) : 일정 시간이 지났을 때 사용되지 않는 파일들을 삭제하거나 다른 곳에 백업하여 S3 저장 공간을 절약하고 싶을 때 사용하는 기능입니다.
+
+버킷의 [관리] > [수명 주기 규칙] > [수명 주기 규칙 생성]   
+![image](https://user-images.githubusercontent.com/43658658/145953097-5ea72a4d-26b6-4d37-84b3-0c079c408124.png)
+
+![image](https://user-images.githubusercontent.com/43658658/145953593-29a6b843-d6f7-4dd1-ad66-48045b12bda4.png)   
+![image](https://user-images.githubusercontent.com/43658658/145954093-2c2c8756-4d27-499e-8d52-8d15a2f396ff.png)   
+![image](https://user-images.githubusercontent.com/43658658/145954176-55a2fa67-c67c-492a-9f0d-553ca23c8327.png)   
+![image](https://user-images.githubusercontent.com/43658658/145954279-28a786dc-609d-4aad-92b0-8bde285b026c.png)   
+![image](https://user-images.githubusercontent.com/43658658/145954358-25d967f3-bd0f-458f-8cf7-1f98f596efaa.png)   
+![image](https://user-images.githubusercontent.com/43658658/145955243-a4826c16-55e6-4534-90bc-8e323b3e7c25.png)
 
 
 
