--- a/10_S3.md
+++ b/10_S3.md
@@ -239,6 +239,12 @@ S3에서는 이 Referer 값을 판단해서 파일을 보여줄지 말지 결정
 로그를 남길 대상을 현재 버킷 또는 다른 버킷을 선택할 수 있습니다.   
 ![image](https://user-images.githubusercontent.com/43658658/145947552-f2fef81b-aa98-4056-a7b6-9670f0e7c785.png)
 
+몇 분 후에 로그 데이터가 객체로 나타납니다.   
+![image](https://user-images.githubusercontent.com/43658658/145956114-9c3857dc-5b25-4019-891b-5bec6b933b27.png)
+
+파일을 다운 받으면 로그에 대한 정보가 나타납니다.   
+![image](https://user-images.githubusercontent.com/43658658/145956412-5816feea-41ec-4435-b227-ba3d62308af0.png)
+
 ## S3 버킷 버전 관리
 
 `버전 관리` 기능을 활용하면 파일을 이전 내용으로 되돌릴 수 있고, 삭제한 파일도 복원할 수 있습니다.   
