--- a/10_S3.md
+++ b/10_S3.md
@@ -234,7 +234,7 @@ S3에서는 이 Referer 값을 판단해서 파일을 보여줄지 말지 결정
 ## S3 버킷 로그 설정
 
 버킷의 [속성] > [서버 액세스 로깅] > [편집]   
-![image](https://user-images.githubusercontent.com/43658658/145947435-4b17fc6d-d9e0-471d-a561-052ba982aa55.png))
+![image](https://user-images.githubusercontent.com/43658658/145947435-4b17fc6d-d9e0-471d-a561-052ba982aa55.png)
 
 로그를 남길 대상을 현재 버킷 또는 다른 버킷을 선택할 수 있습니다.   
 ![image](https://user-images.githubusercontent.com/43658658/145947552-f2fef81b-aa98-4056-a7b6-9670f0e7c785.png)
