--- a/10_S3.md
+++ b/10_S3.md
@@ -40,7 +40,7 @@ S3 객체 Lambda에서 데이터 처리 요금의 여섯 가지 비용 요소를
 2. 버킷을 설정하고 [버킷 만들기]   
 ![image](https://user-images.githubusercontent.com/43658658/145763318-292522b3-4b07-4bc7-8f1e-d4acdb6c6350.png)   
 ![image](https://user-images.githubusercontent.com/43658658/145763295-5d60176d-3bda-4243-ad57-5a1d1e3d092f.png)   
-* `ACL(Access Control List)` : 버킷이나 객체에 액세스를 허용할 `AWS 계정`이나 `그룹`과 `액세스 유형`을 정의합니다. 리소스에 대한 요청을 수신하면, Amazon S3는 `해당 ACL을 확인`해 요청자가 필요한 `액세스 권한을 보유하고 있는지` 판단합니다.
+* `ACL(Access Control List)` : 버킷이나 객체에 액세스를 허용할 `AWS 계정`이나 `그룹`과 `액세스 유형`을 정의합니다. 해당 리소스에 대한 요청을 수신하면, S3는 `해당 ACL을 확인`해 요청자가 필요한 `액세스 권한을 보유하고 있는지` 판단합니다.
 
 ![image](https://user-images.githubusercontent.com/43658658/145763901-9050e46c-6d05-4fa4-a1dd-c20dedc95986.png)   
 버전 관리를 사용하여 한 버킷에 `여러 버전의 객체를 보관`하고, 실수로 삭제되거나 덮어쓰기된 객체를 복원할 수 있습니다. 객체를 영구적으로 제거하지 않고 삭제하는 경우, Amazon S3에서는 `삭제 마커를 삽입`하며 이 삭제 마커가 현재 객체 버전이 됩니다. 따라서 `나중에 이전 버전을 복원`할 수 있습니다.   
