--- a/10_S3.md
+++ b/10_S3.md
@@ -88,6 +88,8 @@ S3 객체 Lambda에서 데이터 처리 요금의 여섯 가지 비용 요소를
 
 여기서 `임의의`는 `모든`의 의미와 같습니다.   
 ![image](https://user-images.githubusercontent.com/43658658/146390383-cf11f2b3-097a-4eda-9a24-3c7ebf6c0817.png)   
+* 퍼블릭 액세스 차단은 버킷 정책과 ACL보다 우선적으로 적용됩니다.
+* 예를 들어, `임의의 ACL` 선택지는 `모든 ACL`에서 퍼블릭 유형의 액세스를 허용해도 그것을 차단하겠다는 의미입니다.
 
 2. [변경 사항 저장]을 누릅니다.   
 ![image](https://user-images.githubusercontent.com/43658658/145769048-84d3198e-0bbd-4b4d-8127-dd982978aa8a.png)
