--- a/10_S3.md
+++ b/10_S3.md
@@ -235,6 +235,8 @@ S3에서는 이 Referer 값을 판단해서 파일을 보여줄지 말지 결정
 앞서 `그림 저장 전용` 버킷 내 객체의 URL로 접속했을 때 그림 파일은 열리지 않았지만, `index.html`에서는 잘 열립니다.   
 웹 브라우저로 `접속한 도메인`과 버킷 정책에 설정한 `Referer 도메인`이 `일치`하기 때문입니다.
 
+[정적 웹 호스팅 버킷 index.html 접속] -> [img 태그에 그림 저장용 버킷 호출] -> [정적 웹 호스팅 버킷의 엔드포인트가 HTTP Referer의 헤더에 담겨서 그림 저장용 버킷에 전달] -> [버킷 정책을 통해 Referer의 값이 일치하여 접근 허용] -> [그림 저장용 버킷 내에 이미지 파일에 접근]
+
 ## S3 버킷 로그 설정
 
 버킷의 [속성] > [서버 액세스 로깅] > [편집]   
