--- a/10_S3.md
+++ b/10_S3.md
@@ -281,7 +281,7 @@ S3에서는 이 Referer 값을 판단해서 파일을 보여줄지 말지 결정
 ![image](https://user-images.githubusercontent.com/43658658/145954279-28a786dc-609d-4aad-92b0-8bde285b026c.png)   
 ![image](https://user-images.githubusercontent.com/43658658/145954358-25d967f3-bd0f-458f-8cf7-1f98f596efaa.png)   
 ![image](https://user-images.githubusercontent.com/43658658/145955243-a4826c16-55e6-4534-90bc-8e323b3e7c25.png)
-
+* [멀티파트 업로드](https://docs.aws.amazon.com/ko_kr/AmazonS3/latest/userguide/mpuoverview.html)
 
 
 
